Bug 76029 - Impress with 2 display : Slides view doesn't auto-scroll in presenter console with navigation by Next or with arrow key (out of screen if enough slides so non-visible)
Summary: Impress with 2 display : Slides view doesn't auto-scroll in presenter console...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: Other All
: medium minor
Assignee: Michael Weghorn
URL:
Whiteboard: repro:6.0+ target:25.8.0
Keywords: implementationError, skillUI
Depends on:
Blocks: Slide-Show Presenter-Console
  Show dependency treegraph
 
Reported: 2014-03-11 12:17 UTC by Michael Meier
Modified: 2025-05-15 20:35 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of problem (86.47 KB, image/png)
2014-03-11 12:17 UTC, Michael Meier
Details
Sample presentation with many slides (27.20 KB, application/vnd.oasis.opendocument.presentation)
2025-05-15 10:22 UTC, Michael Weghorn
Details
Screencast of behavior with https://gerrit.libreoffice.org/c/core/+/185358 in place (6.12 MB, video/x-matroska)
2025-05-15 10:25 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Meier 2014-03-11 12:17:11 UTC
Created attachment 95596 [details]
Screenshot of problem

Steps to reproduce
- open a presentation with many slides
- launch presentation with 2 display
- switch to "slide mode" in presenter console
- navigate through slides by pressing arrow keys or mouse button

Expected behavior :
- active slide should stay visible in presenter console

Current behavior :
- active slide disappears in presenter console


Setup :
LibreOffice 4.2.1.1 
Impress 
using 2 Display and presenter console
Comment 1 sophie 2014-03-11 12:56:42 UTC Comment hidden (obsolete)
Comment 2 Michael Meier 2014-03-12 13:13:27 UTC
(In reply to comment #1)
> I can not reproduce with Version: 4.2.2.1
> Build ID: 3be8cda0bddd8e430d8cda1ebfd581265cca5a0f Ubuntu 13.10. Sophie

Thanks for quick response.

I checked with version 4.2.2.1. Problem still exists.

Maybe I didn't explain very well.

I use a presentation of 10+ slides and 2 displays. One 
display shows presentation and second shows presenter 
console in "Slides" mode as seen in attached screenshot.

I start presentation and walk through the slides by using
arrow keys. Presenter console shows 9 complete slides. 
This number of shown slides depends on size of display.
Active slide is marked by grey frame around slide.

Now I reach 10-th slide. 10-th slide is shown on first 
display (presentation). It's marked as active by grey 
frame on presenter console (second display).  But it's
not shown completely. The slides don't scroll. 

This disturbs usebility because you want to be focused
at your slides and don't want to make slides visible at
presenter console by additionally using scrollbar.

You may compare with digikam while looking through a set 
of fotos. You can navigate with arrow keys and active foto 
is always completely shown.
Comment 3 sophie 2014-03-12 14:09:59 UTC
Hi, ok, now I understand and reproduce, scrolling with navigation keys doesn't work. Thanks for your explanation - Set as New - Sophie
Comment 4 Joel Madero 2015-05-02 15:44:25 UTC Comment hidden (obsolete)
Comment 5 QA Administrators 2016-09-20 09:38:04 UTC Comment hidden (obsolete)
Comment 6 Timur 2019-10-24 07:50:11 UTC
Repro 6.3. 
What adds more to the bug is that we also cannot scroll by mouse, arrows, keyboard keys.. just with a slider.
Comment 7 QA Administrators 2022-04-28 04:05:47 UTC Comment hidden (obsolete)
Comment 8 thierryR 2024-01-18 22:08:13 UTC
This bug is very old. Ten years !!!! 

It's still there and never resolved.
However, the Microsoft slideshow works well

Steps to reproduce
- open a presentation with many slides
- launch presentation with 2 display
- switch to "slide mode" in presenter console
- navigate through slides by pressing arrow keys or mouse button

Expected behavior :
- active slide should stay visible in presenter console

Current behavior :
- active slide disappears in presenter console

Setup :
LibreOffice 7.6.4 
Impress 
using 2 Display and presenter console
Comment 9 Michael Weghorn 2025-05-15 10:22:25 UTC
Created attachment 200820 [details]
Sample presentation with many slides
Comment 10 Michael Weghorn 2025-05-15 10:25:42 UTC
Created attachment 200822 [details]
Screencast of behavior with https://gerrit.libreoffice.org/c/core/+/185358 in place

Pending Gerrit change: https://gerrit.libreoffice.org/c/core/+/185358

The attached screencast shows the behavior with this change in place that results in the new slide being scrolled into view.
Comment 11 Commit Notification 2025-05-15 20:24:19 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/03dfd09f7e3d009b6f5a0dc32f403352935ccd48

tdf#76029 sd console: Scroll to new slide as needed

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.